<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor_main"
    android:fitsSystemWindows="true"
    tools:context="com.rocklobstre.pizzaApp.com.rocklobstre.pizzaApp.activites.AddressActivity"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:padding="10dp">
        <TableRow>
            <TextView
                android:layout_weight=".20"
                android:text="@string/fullName"
                android:textColor="@color/white"
                android:textSize="18dp"
                />
            <EditText
                android:layout_weight=".80"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:lines="1"
                android:imeOptions="actionDone"
                android:id="@+id/edt1"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight=".20"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="18dp"
                />
            <EditText
                android:layout_weight=".80"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:lines="1"
                android:imeOptions="actionDone"
                android:id="@+id/edt2"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight=".20"
                android:text="@string/postalCode"
                android:textColor="@color/white"
                android:lines="1"
                android:imeOptions="actionDone"
                android:textSize="18dp"
                />
            <EditText
                android:layout_weight=".80"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:lines="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:id="@+id/edt3"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight=".20"
                android:text="@string/telephoneNumber"
                android:textColor="@color/white"
                android:textSize="18dp"
                />
            <EditText
                android:layout_weight=".80"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:lines="1"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:id="@+id/edt4"

                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight=".20"
                android:text="@string/paymentInformation"
                android:textColor="@color/white"
                android:textSize="18dp"
                />
            <EditText
                android:layout_weight=".80"
                android:textSize="18dp"
                android:textColor="@color/white"
                android:inputType="number"
                android:lines="1"
                android:imeOptions="actionDone"
                android:id="@+id/edt5"
                />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/bottombarborder"
        android:clipToPadding="false"
        android:elevation="24dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <Button
            android:id="@+id/prevbt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@color/bottombar"
            android:paddingLeft="8sp"
            android:text="Previous"
            android:onClick="onBackPressed"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/bottombartext"
            android:textSize="14sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/nextbt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@color/bottombar"
            android:paddingRight="8sp"
            android:text="Next"
            android:onClick="onSendClick"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="@color/bottombartext"
            android:textSize="14sp"
            android:typeface="sans" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
